# lector

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.jsx  RSSReader.jsx  db.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
